Implement parallel processing, simplified Playwright code, and improved UI with progress indicators

--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,10 @@
     <div id="loadingOverlay" class="loading-overlay" style="display: none;">
         <div class="loading-spinner">
             <i class="fas fa-robot fa-spin"></i>
-            <p>Generating test cases...</p>
+            <p class="progress-text">Generating test cases...</p>
+            <div class="progress-container">
+                <div class="progress-bar"></div>
+            </div>
         </div>
     </div>
 
