feat: LocatorService + modular routes; UI polish; Locators page; model switch to gemini-2.5 (pro→flash fallback); image prompt constraints; fixes

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,29 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+        <header class="app-header">
+            <div class="container header-inner">
+                <a href="/" class="brand">AI Test Generator</a>
+                <nav class="nav">
+                    <a href="/" class="nav-link active">Home</a>
+                    <a href="/locators.html" class="nav-link">Locators</a>
+                    <a href="#api" class="nav-link" id="openApiDocs">API</a>
+                </nav>
+            </div>
+        </header>
+
+        <section class="hero">
+            <div class="container hero-inner">
+                <div class="hero-copy">
+                    <h1>Generate High-Quality Test Cases Instantly</h1>
+                    <p>Bring your acceptance criteria, and get structured, prioritized test cases with optional Playwright code. Now with a dedicated Locators generator.</p>
+                    <div class="hero-cta">
+                        <a href="#generator" class="btn btn-primary">Generate Test Cases</a>
+                        <a href="/locators.html" class="btn btn-outline">Generate Locators</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     <div class="container">
         <header class="header">
             <div class="logo">
@@ -18,7 +41,7 @@
             <p class="subtitle">Generate comprehensive test cases and Playwright scripts from your requirements</p>
         </header>
 
-        <main class="main-content">
+        <main class="main-content" id="generator">
             <div class="form-section">
                 <div class="card">
                     <h2><i class="fas fa-cog"></i> Configuration</h2>
