fix(ui): remove 'Optional' labels from API key fields, clarify keys are required, ensure keys never stored

--- a/public/locators.html
+++ b/public/locators.html
@@ -87,14 +87,14 @@
 
                     <div class="grid-2 compact">
                         <div class="form-group">
-                            <label for="geminiKey">Gemini API Key <span class="optional">(Optional)</span></label>
+                            <label for="geminiKey">Gemini API Key</label>
                             <input type="password" id="geminiKey" placeholder="AIza..." value="" />
-                            <small>If empty, server-side key must be configured.</small>
+                            <small>Your Google Gemini API key. At least one API key (OpenAI or Gemini) is required.</small>
                         </div>
                         <div class="form-group">
-                            <label for="openaiKey">OpenAI API Key <span class="optional">(Optional)</span></label>
+                            <label for="openaiKey">OpenAI API Key</label>
                             <input type="password" id="openaiKey" placeholder="sk-..." value="" />
-                            <small>Fallback provider (if supported on server).</small>
+                            <small>Your OpenAI API key. At least one API key (OpenAI or Gemini) is required.</small>
                         </div>
                     </div>
 
