--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,14 @@
                 <div class="card">
                     <h2><i class="fas fa-cog"></i> Configuration</h2>
                     <div class="form-group">
-                        <label for="openaiKey">OpenAI API Key <span class="optional">(Optional)</span></label>
+                        <label for="openaiKey">OpenAI API Key</label>
                         <input type="password" id="openaiKey" placeholder="sk-..." value="" />
-                        <small>Your OpenAI API key for GPT models (optional - server keys will be used if not provided)</small>
+                        <small>Your OpenAI API key for GPT models. At least one API key (OpenAI or Gemini) is required.</small>
                     </div>
                     <div class="form-group">
-                        <label for="geminiKey">Gemini API Key <span class="optional">(Optional)</span></label>
+                        <label for="geminiKey">Gemini API Key</label>
                         <input type="password" id="geminiKey" placeholder="AI..." value="" />
-                        <small>Your Google Gemini API key (optional - server keys will be used if not provided)</small>
+                        <small>Your Google Gemini API key. At least one API key (OpenAI or Gemini) is required.</small>
                     </div>
                     <div class="form-group">
                         <label for="primaryService">Primary AI Service</label>
